
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct thread_info {int argv_string; } ;
struct addrinfo {int ai_addrlen; int ai_addr; scalar_t__ ai_protocol; int ai_socktype; int ai_family; struct addrinfo* ai_next; scalar_t__ ai_flags; } ;
typedef int ssize_t ;


 int AF_UNSPEC ;
 int EXIT_FAILURE ;
 int SOCK_STREAM ;
 int close (int) ;
 int connect (int,int ,int ) ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 int freeaddrinfo (struct addrinfo*) ;
 char* gai_strerror (int) ;
 int getaddrinfo (char*,char*,struct addrinfo*,struct addrinfo**) ;
 int memset (struct addrinfo*,int ,int) ;
 int socket (int ,int ,scalar_t__) ;
 int stderr ;
 int strcpy (char*,int ) ;
 int usleep (int) ;
 int write (int,char*,int) ;

__attribute__((used)) static void *
thread_start(void *arg)
{
    struct thread_info *tinfo = (struct thread_info *) arg;
    char hostname[64];
    int j;

    strcpy(hostname, tinfo->argv_string);

    j = 0;
    while (j != 10) {
        struct addrinfo hints;
        struct addrinfo *result, *rp;
        int sfd, s;
        ssize_t nwritten;

        memset(&hints, 0, sizeof(struct addrinfo));
        hints.ai_family = AF_UNSPEC;
        hints.ai_socktype = SOCK_STREAM;
        hints.ai_flags = 0;
        hints.ai_protocol = 0;

        s = getaddrinfo(hostname, "http", &hints, &result);
        if (s != 0) {
            fprintf(stderr, "getaddrinfo: %s\n", gai_strerror(s));
            exit(EXIT_FAILURE);
        }

        for (rp = result; rp != ((void*)0); rp = rp->ai_next) {
            sfd = socket(rp->ai_family, rp->ai_socktype, rp->ai_protocol);
            if (sfd == -1)
                continue;

            if (connect(sfd, rp->ai_addr, rp->ai_addrlen) == -1)
                close(sfd);
        }

        if (result != ((void*)0))
            freeaddrinfo(result);

        nwritten = write(sfd, "HEAD / HTTP/1.1\n"
                              "Host:localhost\n"
                              "Range:bytes=0-,0-\n"
                              "Accept-Encoding: gzip", 71);
        if (nwritten == -1)
            close(sfd);

        usleep(300000);

        j++;
    }

    return 0;
}
